# python-project-lvl2

./: README.md  makefile  pyproject.toml
.github/workflows/: test-package.yml
gendiff/: cli.py  flags.py  gendiff.py  generate_diff.py  parsers.py  states.py
gendiff/formats/: formating.py  json_out.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.yaml  file1.yml  grand_file1.yaml  grand_file2.yaml  json_format_out.txt
